[gd_scene load_steps=9 format=2]

[ext_resource path="res://gfx/fonts/nimbus_roman.tres" type="DynamicFont" id=1]
[ext_resource path="res://gfx/ui_elements/right_sidebar/node_icons_atlas.png" type="Texture" id=2]
[ext_resource path="res://gfx/ui_elements/right_sidebar/color_ramps/header.png" type="Texture" id=4]
[ext_resource path="res://scenes/right_sidebar/helpers/NodeHeader.gd" type="Script" id=5]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 22, 22 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 22, 22 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 22, 22 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 22, 22 )

[node name="NodeHeader" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -1144.0
margin_bottom = -770.0
rect_min_size = Vector2( 256, 30 )
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 256.0
margin_bottom = 30.0
mouse_filter = 2
texture = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Mrg" type="MarginContainer" parent="."]
margin_right = 256.0
margin_bottom = 30.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 3
custom_constants/margin_left = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBox" type="HBoxContainer" parent="Mrg"]
margin_left = 3.0
margin_right = 253.0
margin_bottom = 30.0
custom_constants/separation = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Mrg" type="MarginContainer" parent="Mrg/HBox"]
margin_right = 73.0
margin_bottom = 30.0
mouse_filter = 2
custom_constants/margin_top = 6
custom_constants/margin_left = 4

[node name="Title" type="Label" parent="Mrg/HBox/Mrg"]
margin_left = 4.0
margin_top = 6.0
margin_right = 73.0
margin_bottom = 30.0
size_flags_vertical = 5
custom_colors/font_color = Color( 0.0431373, 0.0431373, 0.0431373, 1 )
custom_fonts/font = ExtResource( 1 )
text = "Minervae"
valign = 1

[node name="Icons" type="HBoxContainer" parent="Mrg/HBox"]
margin_left = 73.0
margin_right = 250.0
margin_bottom = 30.0
mouse_filter = 2
size_flags_horizontal = 3
custom_constants/separation = 2
alignment = 2

[node name="Icon1" type="TextureRect" parent="Mrg/HBox/Icons"]
margin_left = 83.0
margin_right = 105.0
margin_bottom = 30.0
mouse_filter = 2
texture = SubResource( 1 )
stretch_mode = 4

[node name="Icon2" type="TextureRect" parent="Mrg/HBox/Icons"]
margin_left = 107.0
margin_right = 129.0
margin_bottom = 30.0
mouse_filter = 2
texture = SubResource( 2 )
stretch_mode = 4

[node name="Icon3" type="TextureRect" parent="Mrg/HBox/Icons"]
margin_left = 131.0
margin_right = 153.0
margin_bottom = 30.0
mouse_filter = 2
texture = SubResource( 3 )
stretch_mode = 4

[node name="Icon4" type="TextureRect" parent="Mrg/HBox/Icons"]
margin_left = 155.0
margin_right = 177.0
margin_bottom = 30.0
mouse_filter = 2
texture = SubResource( 4 )
stretch_mode = 4

[connection signal="mouse_entered" from="." to="." method="_on_NodeHeader_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_NodeHeader_mouse_exited"]
